--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-compress": "^0.12.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
