--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "grunt-express-server": "~0.4.17",
     "grunt-google-cdn": "~0.4.0",
     "grunt-karma": "~0.8.2",
+    "grunt-line-remover": "0.0.2",
     "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
